--- a/RPCalculator/Content/rpcalculator.css
+++ b/RPCalculator/Content/rpcalculator.css
@@ -1,3 +1,14 @@
 ﻿body {
-    margin-top: 70px;
+    margin-top: 70px !important;
 }
+
+table.table {
+    border-collapse: collapse !important;
+}
+
+    table.table th, table.table td {
+        vertical-align: middle !important;
+        text-align: center !important;
+        border-collapse: collapse !important;
+        border: 1px solid silver !important;
+    }
