--- a/RPCalculator/Views/judges.html
+++ b/RPCalculator/Views/judges.html
@@ -1,3 +1,59 @@
 ﻿<div class="container">
-    <div class="alert alert-danger" ng-if="$ctrl.invalid" ng-bind="$ctrl.error"></div>
+    <table class="table table-bordered was-validated" ng-form="form">
+        <thead>
+            <tr>
+                <th colspan="3">Judges</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="judge in $ctrl.judges track by $index">
+                <th>#{{$index + 1}}</th>
+                <td>
+                    <input type="text" placeholder="Name" ng-model="judge.name" class="form-control" required />
+                </td>
+                <td class="text-nowrap" style="width: 1px !important">
+                    <div class="btn-group btn-group-sm">
+                        <button type="button" class="btn" ng-click="$ctrl.moveUp($index)" ng-disabled="$first" title="Move Up">
+                            <i class="fa fa-fw fa-caret-up"></i>
+                        </button>
+                        <button type="button" class="btn" ng-click="$ctrl.moveDown($index)" ng-disabled="$last" title="Move Down">
+                            <i class="fa fa-fw fa-caret-down"></i>
+                        </button>
+                    </div>
+                    <div class="btn-group btn-group-sm">
+                        <button type="button" class="btn" ng-click="$ctrl.remove($index)" title="Remove Judge" ng-disabled="!$ctrl.canRemove" ng-class="{ 'btn-danger': $ctrl.canRemove }">
+                            <i class="fa fa-fw fa-times"></i>
+                        </button>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td></td>
+                <td>
+                    <fieldset ng-disabled="!form.$dirty">
+                        <button type="button" class="btn btn-warning">
+                            <span>Undo</span>
+                            <i class="fa fa-fw fa-undo"></i>
+                        </button>
+                        <button type="button" class="btn btn-success">
+                            <span>Save</span>
+                            <i class="fa fa-fw fa-save"></i>
+                        </button>
+                    </fieldset>
+                </td>
+                <td>
+                    <button type="button" class="btn" ng-click="$ctrl.add()" title="Add New Judge" ng-disabled="!$ctrl.canAdd" ng-class="{ 'btn-primary': $ctrl.canAdd }">
+                        <span>Add New Judge</span>
+                        <i class="fa fa-fw fa-mortar-board"></i>
+                    </button>
+                </td>
+            </tr>
+        </tfoot>
+    </table>
+    <div class="alert alert-danger" ng-if="$ctrl.invalid">
+        <i class="fa fa-fw fa-warning"></i>
+        <span ng-bind="$ctrl.error"></span>
+    </div>
 </div>
