--- a/RPCalculator/Views/judges.html
+++ b/RPCalculator/Views/judges.html
@@ -6,42 +6,46 @@
         </div>
         <div class="alert alert-danger" ng-switch-when="false">
             <i class="fa fa-fw fa-warning"></i>
-            <span ng-bind="$ctrl.error"></span>
+            <span>{{$ctrl.error}}</span>
         </div>
     </ng-switch>
-    <table class="table table-bordered was-validated" ng-form="form">
+    <table class="table table-bordered" ng-form="form">
         <thead>
             <tr>
-                <th colspan="3">Judges</th>
+                <th colspan="2">Judges</th>
             </tr>
         </thead>
         <tbody>
             <tr ng-repeat="judge in $ctrl.judges">
                 <th>#{{$index + 1}}</th>
                 <td>
-                    <input type="text" placeholder="Name" ng-model="judge.name" class="form-control" required />
-                    {{judge}}
-                </td>
-                <td class="text-nowrap" style="width: 1px !important">
-                    <div class="btn-group btn-group-sm">
-                        <button type="button" class="btn" ng-click="$ctrl.moveUp($index)" ng-disabled="$first" title="Move Up">
-                            <i class="fa fa-fw fa-caret-up"></i>
-                        </button>
-                        <button type="button" class="btn" ng-click="$ctrl.moveDown($index)" ng-disabled="$last" title="Move Down">
-                            <i class="fa fa-fw fa-caret-down"></i>
-                        </button>
-                    </div>
-                    <div class="btn-group btn-group-sm">
-                        <button type="button" class="btn" ng-click="$ctrl.remove($index)" title="Remove Judge" ng-disabled="!$ctrl.canRemove" ng-class="{ 'btn-danger': $ctrl.canRemove }">
-                            <i class="fa fa-fw fa-times"></i>
-                        </button>
+                    <div class="input-group input-group-sm">
+                        <div class="input-group-prepend">
+                            <button type="button" class="btn" ng-click="$ctrl.moveUp($index)" ng-disabled="$first" title="Move Up">
+                                <i class="fa fa-fw fa-caret-up"></i>
+                            </button>
+                            <button type="button" class="btn" ng-click="$ctrl.moveDown($index)" ng-disabled="$last" title="Move Down">
+                                <i class="fa fa-fw fa-caret-down"></i>
+                            </button>
+                        </div>
+                        <input type="text" placeholder="Name" ng-model="judge.name" class="form-control" tabindex="{{$index + 1}}" />
+                        <div class="input-group-append">
+                            <button type="button" class="btn" ng-click="$ctrl.remove($index)" title="Remove Judge" ng-disabled="!$ctrl.canRemove">
+                                <i class="fa fa-fw fa-times" ng-class="{ 'text-danger': $ctrl.canRemove }"></i>
+                            </button>
+                        </div>
                     </div>
                 </td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
-                <td></td>
+                <td>
+                    <button type="button" class="btn" ng-click="$ctrl.add()" title="Add New Judge" ng-disabled="!$ctrl.canAdd" ng-class="{ 'btn-primary': $ctrl.canAdd }">
+                        <i class="fa fa-fw fa-mortar-board"></i>
+                        <span>Add</span>
+                    </button>
+                </td>
                 <td>
                     <fieldset ng-disabled="!form.$dirty">
                         <button type="button" class="btn" ng-class="{ 'btn-warning': form.$dirty }" ng-click="$ctrl.undo()">
@@ -54,15 +58,9 @@
                         </button>
                     </fieldset>
                 </td>
-                <td>
-                    <button type="button" class="btn" ng-click="$ctrl.add()" title="Add New Judge" ng-disabled="!$ctrl.canAdd" ng-class="{ 'btn-primary': $ctrl.canAdd }">
-                        <i class="fa fa-fw fa-mortar-board"></i>
-                        <span>Add</span>
-                    </button>
-                </td>
             </tr>
         </tfoot>
     </table>
-    <pre ng-bind="$ctrl.judges"></pre>
-    <pre ng-bind="$ctrl.worksheet.judges"></pre>
+    <pre>{{$ctrl.judges}}</pre>
+    <pre>{{$ctrl.worksheet.judges}}</pre>
 </div>
