--- a/RPCalculator/Views/competitors.html
+++ b/RPCalculator/Views/competitors.html
@@ -1,36 +1,60 @@
 ﻿<div class="container">
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th colspan="3">Competitors</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="judge in $ctrl.judges track by $index" judge-repeater="$ctrl.judges">
-                <th>#{{$index + 1}}</th>
-                <td>
-                    <input type="text" placeholder="Name" ng-model="$judge.name" class="form-control" required />
-                </td>
-                <td>
-                    <button type="button" class="btn btn-danger" ng-click="$ctrl.remove($index)">
-                        <i class="fa fa-fw fa-times"></i>
-                    </button>
-                </td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="3">
-                    <button type="button" class="btn" ng-click="$ctrl.add()" ng-disabled="!$ctrl.canRemove" ng-class="{ 'btn-primary': $ctrl.canRemove }">
-                        <span>Add New Judge</span>
+    <div class="card" ng-class="{ 'border-success': $ctrl.valid, 'border-danger': $ctrl.invalid }" ng-form="form">
+        <h5 class="card-header text-white" ng-class="{ 'bg-success': $ctrl.valid, 'bg-danger': $ctrl.invalid }">
+            <i class="fa fa-fw" ng-class="{ 'fa-check-circle': $ctrl.valid, 'fa-warning': $ctrl.invalid }"></i>
+            <span>{{$ctrl.message}}</span>
+        </h5>
+        <div class="list-group list-group-flush">
+            <div class="list-group-item" ng-repeat="competitor in $ctrl.competitors">
+                <div class="d-flex justify-content-between">
+                    <div class="btn-group flex-shrink-1">
+                        <button type="button" class="btn btn-outline-dark" ng-click="$ctrl.moveUp($index)" ng-disabled="$first" title="Move Up">
+                            <i class="fa fa-fw fa-caret-up"></i>
+                        </button>
+                        <button type="button" class="btn btn-outline-dark" ng-click="$ctrl.moveDown($index)" ng-disabled="$last" title="Move Down">
+                            <i class="fa fa-fw fa-caret-down"></i>
+                        </button>
+                    </div>
+                    <div class="flex-shrink-1 ml-2">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><strong>#</strong></span>
+                            </div>
+                            <input type="text" placeholder="#" ng-model="competitor.id" class="form-control text-center" tabindex="{{$index * 2 + 1}}" />
+                        </div>
+                    </div>
+                    <div class="flex-grow-1 ml-2">
+                        <input type="text" placeholder="Name" ng-model="competitor.name" class="form-control" tabindex="{{$index * 2 + 2}}" />
+                    </div>
+                    <div class="flex-shrink-1 ml-2">
+                        <button type="button" class="btn btn-outline-dark" ng-click="$ctrl.remove($index)" title="Remove competitor" ng-disabled="!$ctrl.canRemove">
+                            <i class="fa fa-fw fa-times" ng-class="{ 'text-danger': $ctrl.canRemove }"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card-body">
+            <div class="d-flex justify-content-between">
+                <div>
+                    <button type="button" class="btn" ng-click="$ctrl.add()" title="Add New Competitor" ng-disabled="!$ctrl.canAdd" ng-class="{ 'btn-primary': $ctrl.canAdd }">
                         <i class="fa fa-fw fa-mortar-board"></i>
+                        <span>Add</span>
                     </button>
-                </td>
-            </tr>
-        </tfoot>
-    </table>
-    <div class="alert alert-danger" ng-if="$ctrl.invalid">
-        <i class="fa fa-fw fa-warning"></i>
-        <span ng-bind="$ctrl.error"></span>
+                </div>
+                <div>
+                    <fieldset ng-disabled="!form.$dirty">
+                        <button type="button" class="btn" ng-class="{ 'btn-warning': form.$dirty }" ng-click="$ctrl.undo()">
+                            <i class="fa fa-fw fa-undo"></i>
+                            <span>Undo</span>
+                        </button>
+                        <button type="button" class="btn" ng-class="{ 'btn-success': form.$dirty }" ng-disabled="$ctrl.invalid" ng-click="$ctrl.save()">
+                            <i class="fa fa-fw fa-save"></i>
+                            <span>Save</span>
+                        </button>
+                    </fieldset>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
