--- a/RPCalculator/Views/judges.html
+++ b/RPCalculator/Views/judges.html
@@ -1,66 +1,59 @@
 ﻿<div class="container">
-    <ng-switch on="$ctrl.valid">
-        <div class="alert alert-success" ng-switch-when="true">
-            <i class="fa fa-fw fa-check-circle"></i>
-            <span>The judges are valid.</span>
-        </div>
-        <div class="alert alert-danger" ng-switch-when="false">
-            <i class="fa fa-fw fa-warning"></i>
-            <span>{{$ctrl.error}}</span>
-        </div>
-    </ng-switch>
-    <table class="table table-bordered" ng-form="form">
-        <thead>
-            <tr>
-                <th colspan="2">Judges</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="judge in $ctrl.judges">
-                <th>#{{$index + 1}}</th>
-                <td>
-                    <div class="input-group input-group-sm">
-                        <div class="input-group-prepend">
-                            <button type="button" class="btn" ng-click="$ctrl.moveUp($index)" ng-disabled="$first" title="Move Up">
-                                <i class="fa fa-fw fa-caret-up"></i>
-                            </button>
-                            <button type="button" class="btn" ng-click="$ctrl.moveDown($index)" ng-disabled="$last" title="Move Down">
-                                <i class="fa fa-fw fa-caret-down"></i>
-                            </button>
-                        </div>
-                        <input type="text" placeholder="Name" ng-model="judge.name" class="form-control" tabindex="{{$index + 1}}" />
-                        <div class="input-group-append">
-                            <button type="button" class="btn" ng-click="$ctrl.remove($index)" title="Remove Judge" ng-disabled="!$ctrl.canRemove">
-                                <i class="fa fa-fw fa-times" ng-class="{ 'text-danger': $ctrl.canRemove }"></i>
-                            </button>
+    <div class="card" ng-class="{ 'border-success': $ctrl.valid, 'border-danger': $ctrl.invalid }" ng-form="form">
+        <h5 class="card-header text-white" ng-class="{ 'bg-success': $ctrl.valid, 'bg-danger': $ctrl.invalid }">
+            <i class="fa fa-fw" ng-class="{ 'fa-check-circle': $ctrl.valid, 'fa-warning': $ctrl.invalid }"></i>
+            <span>{{$ctrl.message}}</span>
+        </h5>
+        <div class="list-group list-group-flush">
+            <div class="list-group-item" ng-repeat="judge in $ctrl.judges">
+
+
+                <div class="d-flex justify-content-between">
+                    <div class="btn-group flex-shrink-1">
+                        <button type="button" class="btn btn-outline-dark" ng-click="$ctrl.moveUp($index)" ng-disabled="$first" title="Move Up">
+                            <i class="fa fa-fw fa-caret-up"></i>
+                        </button>
+                        <button type="button" class="btn btn-outline-dark" ng-click="$ctrl.moveDown($index)" ng-disabled="$last" title="Move Down">
+                            <i class="fa fa-fw fa-caret-down"></i>
+                        </button>
+                    </div>
+                    <div class="flex-grow-1 ml-2">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><strong>#{{$index + 1}}</strong></span>
+                            </div>
+                            <input type="text" placeholder="Name" ng-model="judge.name" class="form-control" tabindex="{{$index + 1}}" />
                         </div>
                     </div>
-                </td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td>
+                    <div class="flex-shrink-1 ml-2">
+                        <button type="button" class="btn btn-outline-dark" ng-click="$ctrl.remove($index)" title="Remove Judge" ng-disabled="!$ctrl.canRemove">
+                            <i class="fa fa-fw fa-times" ng-class="{ 'text-danger': $ctrl.canRemove }"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card-body">
+            <div class="d-flex justify-content-between">
+                <div>
                     <button type="button" class="btn" ng-click="$ctrl.add()" title="Add New Judge" ng-disabled="!$ctrl.canAdd" ng-class="{ 'btn-primary': $ctrl.canAdd }">
                         <i class="fa fa-fw fa-mortar-board"></i>
                         <span>Add</span>
                     </button>
-                </td>
-                <td>
+                </div>
+                <div>
                     <fieldset ng-disabled="!form.$dirty">
                         <button type="button" class="btn" ng-class="{ 'btn-warning': form.$dirty }" ng-click="$ctrl.undo()">
                             <i class="fa fa-fw fa-undo"></i>
                             <span>Undo</span>
                         </button>
-                        <button type="button" class="btn" ng-class="{ 'btn-success': form.$dirty && $ctrl.valid }" ng-disabled="$ctrl.invalid" ng-click="$ctrl.save()">
+                        <button type="button" class="btn" ng-class="{ 'btn-success': form.$dirty }" ng-disabled="$ctrl.invalid" ng-click="$ctrl.save()">
                             <i class="fa fa-fw fa-save"></i>
                             <span>Save</span>
                         </button>
                     </fieldset>
-                </td>
-            </tr>
-        </tfoot>
-    </table>
-    <pre>{{$ctrl.judges}}</pre>
-    <pre>{{$ctrl.worksheet.judges}}</pre>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
