--- a/RPCalculator/Views/worksheet.html
+++ b/RPCalculator/Views/worksheet.html
@@ -2,12 +2,32 @@
     <table class="table table-bordered">
         <thead>
             <tr>
-                <th colspan="{{$ctrl.judges.length}}">Judges</th>
-
+                <th colspan="2" rowspan="2">
+                    <a ng-href="#!/competitors/{{$ctrl.index}}" class="btn btn-secondary">
+                        <i class="fa fa-fw fa-trophy"></i>
+                        <span>Competitors</span>
+                    </a>
+                </th>
+                <th colspan="{{$ctrl.judges.length}}">
+                    <a ng-href="#!/judges/{{$ctrl.index}}" class="btn btn-secondary">
+                        <i class="fa fa-fw fa-mortar-board"></i>
+                        <span>Judges</span>
+                    </a>
+                </th>
             </tr>
             <tr>
-                <th ng-repeat="judge in $ctrl.judges track by $index" judge-repeater="$ctrl.judges" ng-bind="$judge.name"></th>
+                <th ng-repeat="judge in $ctrl.judges">{{judge.name}}</th>
             </tr>
         </thead>
+        <tbody>
+            <tr ng-repeat="competitor in $ctrl.competitors">
+                <th>#{{competitor.id}}</th>
+                <th>{{competitor.name}}</th>
+                <td ng-repeat="judge in $ctrl.judges">
+                    <input type="text" class="form-control text-center" ng-model="$ctrl.scores(competitor)[$index]" />
+                </td>
+                <td>{{competitor.scores}}</td>
+            </tr>
+        </tbody>
     </table>
 </div>
