--- a/RPCalculator/Views/worksheet.html
+++ b/RPCalculator/Views/worksheet.html
@@ -1,4 +1,7 @@
 ﻿<div class="container-fluid">
+    <div class="text-center">
+        <h3 class="h3 text-dark">{{$ctrl.worksheet.title || "New Worksheet"}}</h3>
+    </div>
     <div class="card text-center" ng-class="{ 'border-success': form.$valid, 'border-danger': form.$invalid }" ng-form="form">
         <h5 class="card-header text-white text-left" ng-class="{ 'bg-success': form.$valid, 'bg-danger':form.$invalid }" ng-if="form.$invalid">
             <i class="fa fa-fw" ng-class="{ 'fa-check-circle': form.$valid, 'fa-warning': form.$invalid }"></i>
