--- a/RPCalculator/Views/results.html
+++ b/RPCalculator/Views/results.html
@@ -12,8 +12,8 @@
         </thead>
         <tbody ng-form="form">
             <tr ng-repeat="competitor in $ctrl.competitors | orderBy: 'rank'">
-                <th class="h3 align-middle">
-                    <span class="badge badge-danger">{{$ctrl.ranks[competitor.rank - 1][0]}}<sup>{{$ctrl.ranks[competitor.rank - 1][1]}}{{$ctrl.ranks[competitor.rank - 1][2]}}</sup></span>
+                <th class="h3 align-middle bg-danger text-white">
+                    <span>{{$ctrl.ranks[competitor.rank - 1][0]}}<sup>{{$ctrl.ranks[competitor.rank - 1][1]}}{{$ctrl.ranks[competitor.rank - 1][2]}}</sup></span>
                 </th>
                 <th class="h4 text-dark align-middle">#{{competitor.id}}</th>
                 <th class="h4 text-dark align-middle">{{competitor.name}}</th>
