--- a/RPCalculator/Views/workbook.html
+++ b/RPCalculator/Views/workbook.html
@@ -2,7 +2,7 @@
     <div class="card">
         <div class="card-header text-center">
             <form name="form" autocomplete="off">
-                <input name="title" type="text" placeholder="Workbook Title" ng-model="$ctrl.$wb.title"
+                <input name="title" type="text" placeholder="Workbook Title" ng-model="$ctrl.$workbook.title"
                        class="form-control text-center" ng-class="vclass(form.title, null)" required />
             </form>
         </div>
@@ -10,8 +10,15 @@
             <p class="card-text">A workbook allows you to collate the scores for multiple competitions.
             <p class="card-text">Add a new worksheet to get started.</p>
         </div>
-        <div class="list-group list-group-flush" ng-if="$ctrl.worksheets.length">
-            <a ng-href="#!/worksheets/{{$index}}" class="list-group-item list-group-item-action" ng-repeat="worksheet in $ctrl.worksheets" ng-bind="worksheet.title"></a>
+        <div class="list-group list-group-flush p-2" ng-repeat="worksheet in $ctrl.worksheets">
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <a ng-href="#!/worksheets/{{$index}}" class="btn btn-primary">
+                        <i class="fa fa-fw fa-table"></i>
+                    </a>
+                </div>
+                <input type="text" class="form-control" ng-model="worksheet.title" />
+            </div>
         </div>
         <div class="card-footer">
             <button type="button" class="btn" ng-class="vclass(form, 'btn-primary', 'btn-default')" ng-disabled="form.$invalid">
