--- a/RPCalculator/Views/worksheet.html
+++ b/RPCalculator/Views/worksheet.html
@@ -1,19 +1,19 @@
 ﻿<div class="container-fluid">
-    <div class="text-center">
-        <h3 class="h3 text-dark">{{$ctrl.worksheet.title || "New Worksheet"}}</h3>
-    </div>
     <div class="card text-center" ng-class="{ 'border-success': form.$valid, 'border-danger': form.$invalid }" ng-form="form">
-        <h5 class="card-header text-white text-left" ng-class="{ 'bg-success': form.$valid, 'bg-danger':form.$invalid }" ng-if="form.$invalid">
-            <i class="fa fa-fw" ng-class="{ 'fa-check-circle': form.$valid, 'fa-warning': form.$invalid }"></i>
-            <span>{{$ctrl.message}}</span>
-        </h5>
-        <div class="card-header" ng-if="form.$valid">
-            <ul class="nav nav-tabs nav-fill card-header-tabs">
+        <div class="card-header">
+            <h4 class="card-title">
+                <strong>{{$ctrl.worksheet.title || "New Worksheet"}}</strong>
+            </h4>
+            <ul class="nav nav-tabs nav-fill card-header-tabs" ng-if="form.$valid">
                 <li class="nav-item" ng-repeat="tab in $ctrl.tabs">
                     <a class="nav-link" ng-class="{ 'active': tab === $ctrl.tab }" href="#" ng-click="$ctrl.setTab(tab, $event)">{{tab}}</a>
                 </li>
             </ul>
         </div>
+        <h5 class="card-header bg-danger text-white card-subtitle" ng-if="form.$invalid">
+            <i class="fa fa-fw" ng-class="{ 'fa-check-circle': form.$valid, 'fa-warning': form.$invalid }"></i>
+            <span>{{$ctrl.message}}</span>
+        </h5>
         <div class="card-body">
             <ng-include src="$ctrl.templateUrl"></ng-include>
         </div>
