--- a/RPCalculator/Views/scoring.html
+++ b/RPCalculator/Views/scoring.html
@@ -2,13 +2,13 @@
     <table class="table table-bordered">
         <thead>
             <tr>
-                <th colspan="2" rowspan="2" class="align-middle">
+                <th colspan="2" rowspan="2" class="align-middle p-1">
                     <a ng-href="#!/competitors/{{$ctrl.index}}" class="btn btn-primary">
                         <i class="fa fa-fw fa-trophy"></i>
                         <span>Competitors</span>
                     </a>
                 </th>
-                <th colspan="{{$ctrl.judges.length}}" class="align-middle">
+                <th colspan="{{$ctrl.judges.length}}" class="align-middle p-1">
                     <a ng-href="#!/judges/{{$ctrl.index}}" class="btn btn-primary">
                         <i class="fa fa-fw fa-mortar-board"></i>
                         <span>Judges</span>
@@ -16,14 +16,14 @@
                 </th>
             </tr>
             <tr>
-                <th ng-repeat="judge in $ctrl.judges" class="align-middle">{{judge.name}}</th>
+                <th ng-repeat="judge in $ctrl.judges" class="align-middle p-1">{{judge.name}}</th>
             </tr>
         </thead>
         <tbody ng-form="form">
             <tr ng-repeat="competitor in $ctrl.competitors">
-                <th class="align-middle">#{{competitor.id}}</th>
-                <th class="align-middle">{{competitor.name}}</th>
-                <td ng-repeat="judge in $ctrl.judges" class="align-middle">
+                <th class="align-middle p-1">#{{competitor.id}}</th>
+                <th class="align-middle p-1">{{competitor.name}}</th>
+                <td ng-repeat="judge in $ctrl.judges" class="align-middle p-1">
                     <input type="text" name="{{$score.name()}}" tabindex="{{$score.tabIndex}}"
                            class="form-control text-center" ng-class="$score.ngClass"
                            ng-model="$score.value" integer score required />
