--- a/RPCalculator/Views/worksheet.html
+++ b/RPCalculator/Views/worksheet.html
@@ -17,8 +17,12 @@
         <div class="card-body">
             <ng-include src="$ctrl.templateUrl"></ng-include>
         </div>
-        <div class="card-footer text-right">
-            <a href="#" class="btn btn-primary">
+        <div class="card-footer">
+            <button type="button" class="btn btn-primary pull-left" title="Copy Results to New Worksheet" ng-click="$ctrl.copy()" ng-if="$ctrl.tabIndex === 2">
+                <i class="fa fa-fw fa-copy"></i>
+                <span>New&hellip;</span>
+            </button>
+            <a href="#" class="btn btn-primary pull-right" title="Back to Workbook">
                 <i class="fa fa-fw fa-arrow-circle-left"></i>
                 <span>Back</span>
             </a>
