--- a/RPCalculator/Views/workbook.html
+++ b/RPCalculator/Views/workbook.html
@@ -34,7 +34,7 @@
         <div class="card-footer">
             <button type="button" class="btn btn-primary" ng-click="$ctrl.add()">
                 <i class="fa fa-fw fa-plus-circle"></i>
-                <span>Add&hellip;</span>
+                <span>New&hellip;</span>
             </button>
         </div>
     </div>
