--- a/RPCalculator/Views/menu.html
+++ b/RPCalculator/Views/menu.html
@@ -24,6 +24,12 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a href="#" class="nav-link text-nowrap" ng-click="$menu.publish($event)">
+                    <i class="fa fa-fw fa-print"></i>
+                    <span>Publish</span>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a href="#" class="nav-link text-nowrap" ng-click="$menu.example($event)">
                     <i class="fa fa-fw fa-trophy"></i>
                     <span>Example</span>
