--- a/RPCalculator/Content/rpcalculator.css
+++ b/RPCalculator/Content/rpcalculator.css
@@ -7,6 +7,6 @@ table, thead, tbody, tfoot, td, th {
     border: 1px solid silver !important;
 }
 
-.page-break-after {
-    page-break-after: always !important;
+table {
+    page-break-inside: avoid;
 }
