--- a/RPCalculator/Views/publish.html
+++ b/RPCalculator/Views/publish.html
@@ -1,16 +1,17 @@
 ﻿<div class="container-fluid">
+    <div class="text-center" style="runn"><p><h4 ng-bind="$publish.workbook.title"></h4></p></div>
     <div ng-repeat="$ctrl in $publish.workbook.worksheets" class="text-center">
-        <div class="table-responsive" ng-class="{ 'page-break-after': !$last && ($index % 3 === 2) }" >
+        <div class="table-responsive">
             <table class="table table-bordered">
                 <thead>
                     <tr>
                         <th colspan="{{$ctrl.judges.length + $ctrl.competitors.length + 3}}" class="h5"><b>{{$ctrl.title}}</b></th>
                     </tr>
                     <tr>
+                        <th rowspan="2" class="align-middle p-1">Result</th>
                         <th rowspan="2" class="align-middle p-1" colspan="2">Competitors</th>
-                        <th colspan="{{$ctrl.judges.length}}" class="align-middle p-1">Judges</th>
+                        <th colspan="{{$ctrl.judges.length}}" class="align-middle p-1">Judges' Ranking</th>
                         <th colspan="{{$ctrl.competitors.length}}" class="align-middle p-1">Tally</th>
-                        <th rowspan="2" class="align-middle p-1">Results</th>
                     </tr>
                     <tr>
                         <th ng-repeat="judge in $ctrl.judges" class="align-middle text-nowrap p-1">{{judge.name}}</th>
@@ -20,8 +21,11 @@
                 <tbody ng-form="form">
                     <tr ng-repeat="competitor in $ctrl.competitors | orderBy: 'rank'"
                         ng-class="{ 'text-muted': competitor.rank > $ctrl.top }">
-                        <th class="align-middle p-1">#{{competitor.id}}</th>
+                        <th class="align-middle p-1" ng-class="{ 'h4': competitor.rank <= $ctrl.top }">
+                            <span>{{$publish.ranks[competitor.rank - 1][0]}}<sup>{{$publish.ranks[competitor.rank - 1][1]}}{{$publish.ranks[competitor.rank - 1][2]}}</sup></span>
+                        </th>
                         <th class="align-middle p-1">{{competitor.name}}</th>
+                        <th class="align-middle p-1">#{{competitor.id}}</th>
                         <td class="align-middle p-1 h5" ng-repeat="judge in $ctrl.judges">{{competitor.scores[$index]}}</td>
                         <td ng-repeat="item in $ctrl.competitors" class="align-middle p-1">
                             <ng-switch on="!!competitor.tally[$index * 2]">
@@ -33,9 +37,6 @@
                                 <small ng-switch-when="false" class="text-muted">No<br />Majority</small>
                             </ng-switch>
                         </td>
-                        <th class="h4 align-middle p-1">
-                            <span>{{$publish.ranks[competitor.rank - 1][0]}}<sup>{{$publish.ranks[competitor.rank - 1][1]}}{{$publish.ranks[competitor.rank - 1][2]}}</sup></span>
-                        </th>
                     </tr>
                 </tbody>
             </table>
